--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ author:
   twitter:
   # disqus: your_disqus_forum_shortname
 
-# google_analytics: 'UA-XXXXXXXX-X'
+google_analytics: 'UA-45209567-2'
 
 # Syntax highlighting
 highlightstyle: ''
